--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Magic tricks -- History'
 - !lcsh 'Magicians -- France -- Biography'
 - !lcc 'GV'
+- GITenberg
 title: The Unmasking of Robert-Houdin
 url: http://www.gutenberg.org/ebooks/42723
